Added a bit of styling, added a status column to keep track if the book is read or not, added toggle on status

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
                 <input type="text" class="author" id="author" >
             </label>
 
+            <label class="form-group">
+                <span class="field-label">Status</span>
+                <select class="status" name="status" id="status">
+                    <option value="read">Read</option>
+                    <option value="not read">Not Read</option>
+                </select>
+            </label>
+
             <button id="add-book">Add Book</button>
         </section>
 
@@ -33,8 +41,10 @@
                     <tr>
                         <th>Title</th>
                         <th>Author</th>
+                        <th>Status</th>
                     </tr>
                 </thead>
+
                 <tbody>
 
                 </tbody>
